[package]
name = "bitflare"
version = "0.0.0"
edition = "2024"
readme = "README.md"
description = "A `no_std` friendly simple framing format"
documentation = "https://docs.rs/bitflare/"
authors = ["Troy Neubauer <troyneubauer@gmail.com>"]
license = "MIT"
keywords = ["no_std", "serilization", "format"]
categories = ["encoding"]

[features]
default = ["std"]
std = []

[dependencies]
anyhow = { version = "1.0.97", optional = true }
crc = "3.2.1"
heapless = "0.7.0"
memchr = { version = "2.7.4", default-features = false }

[dev-dependencies]
hxdmp = "0.2.1"
rand = "0.9.0"
rand_chacha = "0.9.0"
