[package]
name = "bitflare"
version = "0.0.0"
edition = "2024"
readme = "README.md"
description = "A `no_std` friendly simple framing format"
documentation = "https://docs.rs/bitflare/"
authors = ["Troy Neubauer <troyneubauer@gmail.com>"]
license = "MIT"
keywords = ["no_std", "serilization", "format"]
categories = ["encoding"]

[features]
default = ["std", "log"]
std = []
log = ["dep:log"]
defmt = ["dep:defmt"]

[dependencies]
anyhow = { version = "1.0.97", optional = true }
crc = "3.2.1"
defmt = { version = "0.3.10", optional = true }
heapless = "0.8.0"
log = { version = "0.4.26", optional = true }
memchr = { version = "2.7.4", default-features = false }

[dev-dependencies]
hxdmp = "0.2.1"
rand = "0.9.0"
rand_chacha = "0.9.0"
